--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Simon</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="breakpoints.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 
   <script
@@ -17,7 +18,7 @@
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key to Start</h1>
+  <h1 id="level-title">Press the button to start</h1>
   <div class="container">
     <div class="row">
 
@@ -42,8 +43,7 @@
     </div>
 
   </div>
-
-
+  <button class="start-button">Start</button>
 </body>
 
 </html>
