--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Simon</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="breakpoints.css">
-  <meta meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="theme-color" content="#ffffff">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 
   <script
